--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Encryper</title>
+<title>Encrypter</title>
 <style>
   * {
     margin: 0;
@@ -226,7 +226,7 @@
 
 <div class="container">
   <header>
-    <h1>Encryper</h1>
+    <h1>Encrypter</h1>
   </header>
 
   <div class="key-section">
