--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
     .stats-bar {
       flex-direction: column;
       gap: 1rem;
+      display: none;
     }
   }
 </style>
@@ -251,6 +252,17 @@
       <textarea id="encrypted" placeholder="Symbols will appear here..."></textarea>
     </div>
   </div>
+
+  <div class="stats-bar">
+    <div class="stat">
+      <span class="stat-label">Compression</span>
+      <span class="stat-value neutral" id="compressionValue">0%</span>
+    </div>
+    <div class="stat">
+      <span class="stat-label">Size Reduction</span>
+      <span class="stat-value neutral" id="reductionValue">0 chars</span>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -259,7 +271,8 @@ const encryptedBox = document.getElementById("encrypted");
 const keyBox = document.getElementById("key");
 const originalCount = document.getElementById("originalCount");
 const encryptedCount = document.getElementById("encryptedCount");
-
+const compressionValue = document.getElementById("compressionValue");
+const reductionValue = document.getElementById("reductionValue");
 
 // Standard Alphabet
 const normalAlphabet = 
@@ -418,6 +431,7 @@ function decrypt(text, key) {
     if (symbolToDict[sym]) {
       const phrase = symbolToDict[sym];
       out += phrase;
+      idx += phrase.length;
       continue;
     }
     
@@ -444,13 +458,41 @@ function decrypt(text, key) {
 
 let isUpdating = false;
 
-
+function updateStats() {
+  const origLen = originalBox.value.length;
+  const encLen = encryptedBox.value.length;
+  
+  originalCount.textContent = `${origLen} character${origLen !== 1 ? 's' : ''}`;
+  encryptedCount.textContent = `${encLen} character${encLen !== 1 ? 's' : ''}`;
+  
+  if (origLen > 0) {
+    const savings = Math.round((1 - (encLen / origLen)) * 100);
+    const reduction = origLen - encLen;
+    
+    if (savings < 0) {
+      compressionValue.textContent = `${Math.abs(savings)}%`;
+      compressionValue.className = 'stat-value negative';
+      reductionValue.textContent = `+${Math.abs(reduction)}`;
+      reductionValue.className = 'stat-value negative';
+    } else {
+      compressionValue.textContent = `${savings}%`;
+      compressionValue.className = 'stat-value positive';
+      reductionValue.textContent = `−${reduction}`;
+      reductionValue.className = 'stat-value positive';
+    }
+  } else {
+    compressionValue.textContent = '0%';
+    compressionValue.className = 'stat-value neutral';
+    reductionValue.textContent = '0';
+    reductionValue.className = 'stat-value neutral';
+  }
+}
 
 function updateFromOriginal() {
   if (isUpdating) return;
   isUpdating = true;
   encryptedBox.value = encrypt(originalBox.value, keyBox.value);
-
+  updateStats();
   isUpdating = false;
 }
 
@@ -458,7 +500,7 @@ function updateFromEncrypted() {
   if (isUpdating) return;
   isUpdating = true;
   originalBox.value = decrypt(encryptedBox.value, keyBox.value);
-
+  updateStats();
   isUpdating = false;
 }
 
