--- a/v5.html
+++ b/v5.html
@@ -90,7 +90,7 @@
     try {
       statsEl.textContent = "Encoding...";
       const key = keyEl.value || "";
-      const out = await window.encrypt(inputEl.value, key);
+      const out = "䀦" + (await window.encrypt(inputEl.value, key));
       outputEl.value = out;
       const o = inputEl.value.length;
       const e = out.length;
@@ -108,7 +108,7 @@
     try {
       statsEl.textContent = "Decoding...";
       const key = keyEl.value || "";
-      const out = await window.decrypt(outputEl.value, key);
+      const out = (await window.decrypt(outputEl.value.slice(1), key));
       inputEl.value = out;
       statsEl.textContent = `Decoded length: ${out.length} chars`;
     } catch (err) {
